--- a/styles/Index/index.css
+++ b/styles/Index/index.css
@@ -1,5 +1,40 @@
-* {
+/* * {
     border: 1px solid red !important;
+} */
+
+input {
+    -webkit-appearance: none;
+    appearance: none;
+    border: 0;
+    border-bottom: 2px solid grey;
+    font-family: inherit;
+    background: rgba(#000,.02);
+    box-shadow: inset 0 -1px 0 rgba(#000,.3);
+    color: #000;
+    transition: all .35s ease-in-out;
+}
+
+input:hover {
+    background: rgba(#000,.04);
+    box-shadow: inset 0 -1px 0 rgba(#000,.5);
+}
+
+input:focus {
+    background: rgba(#000,.05);
+    outline: none;
+    box-shadow: inset 0 -2px 0 #0077FF;
+}
+
+input::placeholder {
+    font-weight: 400;
+    font-size: 1rem;
+    line-height: 1.25rem;
+}
+
+input:focus::placeholder {
+    position: absolute;
+    top: 0;
+    left: 0;
 }
 
 /* HEADER & NAVBAR */
@@ -74,10 +109,11 @@ header {
 .catalogue {
     width: 80%;
     margin: 1rem auto;
+    padding: 1rem;
 }
 
 .sub-catalogue {
-    margin: 1rem;
+    margin: 2rem;
 }
 
 .sub-catalogue .title {
@@ -87,6 +123,7 @@ header {
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
+    margin: 1rem 0;
 }
 
 .sub-catalogue .title h3 {
@@ -96,7 +133,7 @@ header {
     line-height: 2.5rem;
 }
 
-.sub-catalogue .title span {
+.sub-catalogue .title a {
     color: #2A7AE4;
     font-style: normal;
     font-weight: 700;
@@ -104,7 +141,7 @@ header {
     line-height: 1.3rem;
 }
 
-.sub-catalogue .title span img {
+.sub-catalogue .title a img {
     vertical-align: text-top;
 }
 
@@ -134,4 +171,82 @@ header {
     font-weight: 700;
     font-size: 1rem;
     line-height: 1.3rem;
+}
+
+/* PRE-FOOTER */
+.pre-footer {
+    background: #EAF2FD;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    padding: 4rem;
+    gap: 7rem;
+}
+
+.pre-footer .container {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: 1fr;
+    grid-column-gap: 0px;
+    grid-row-gap: 0px;
+    width: 80%;
+}
+
+.links {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: flex-start;
+}
+
+.links a {
+    margin: 0.5rem;
+}
+
+.formulario > p {
+    font-style: normal;
+    font-weight: 700;
+    font-size: 1rem;
+    line-height: 1.3rem;
+    color: #464646;
+}
+
+
+.input-nombre {
+    width: 95%;
+    height: 51px;
+    border-radius: 4px;
+    margin: 0.2rem;
+}
+
+.input-texto {
+    width: 95%;
+    height: 82px;
+    border-radius: 4px;
+    margin: 0.2rem;
+}
+
+.input-button {
+    background: #2A7AE4;
+    width: 144px;
+    height: 51px;
+    color: #FFFFFF;
+    margin: 0.2rem;
+    border: 1px solid #FFFFFF;
+}
+
+/* FOOTER */
+footer {
+    width: 100%;
+    height: 2.5rem;
+
+    font-style: normal;
+    font-weight: 500;
+    font-size: 1rem;
+    line-height: 1.3rem;
+    text-align: center;
+
+    color: #464646;
 }
